Prevent QR code from overflowing the UI

--- a/src/components/QRCodeView.css
+++ b/src/components/QRCodeView.css
@@ -2,3 +2,7 @@
 	margin: 1em 0;
 	text-align: center;
 }
+
+.qr-code img {
+	max-width: 100%;
+}
